AdminToolbox.VMWareAutomate/4.1.0.1/ChangeLog.md
# **AdminToolbox.VMWareAutomate**

![AdminToolbox.VMWareAutomate](https://github.com/TheTaylorLee/AdminToolbox/blob/master/Images/AdminToolbox.VMWareAutomate.png)

* **1.0.0** Created the Module
* **1.0.1** Fixed Formatting issues
* **1.0.2** Changes to importing required modules and when connecting to servers
* **1.0.3** Updated module file
* **1.1.3** Added Function Get-ToolsAutoUpgradeState
* **1.1.4** Fixed Enable-AutoToolsUpgrade
* **1.1.5** Added Error Supression
* **1.1.6** Option to Include unmanaged added to functions
* **1.1.7** Option to Include unmanaged added to get-vmtools
* **1.1.8** Function fixes applied
* **1.2.8** Added Invoke-Power Function
* **1.2.9** Added CmdletBinding
* **1.2.10** Fixed Parameter Sets for Invoke-Power
* **1.3.10** Added Invoke-HotAdd
* **1.4.10** Added an Intro and Updated Get-VMWareAutomate
* **1.4.11** Modified Get-DRBackup
* **1.4.12** Added some Extended Properties to Get-DRBackup
* **1.4.13** Added fancy tables
* **1.4.14** Improved parameter support
* **1.4.15** Added A Change Log
* **2.4.16** Split functions into individual files
* **2.4.17** Added Get-Elevation private function
* **2.4.18** Added Parameter help
* **2.4.19** Grammar
* **2.4.20** Added Tags and Links
* **2.4.21** Updated Get-IntroVAT
* **2.4.22** Fixed function typo
* **2.4.24** Setup Github and updated Manifest PSData
* **2.4.25** Date fix for Get-DRBackup final function
* **3.1.1.1** Moved to proper version control
* **3.1.2.1** Updated Functions help
* **4.0.0.0** Converted from a standalone module to a dependency module of admintoolbox
* **4.1.0.0** Added Update-PowerCLIConfiguration and Reduced the module load time using .net methods
* **4.1.0.1** Fix for Invoke-Unzip